09-14-13
 - Imported the Cyberman/Tactile stuff from Heretic.
 - Added the original mprintf from DOS Doom.
 - Original gamemode determination banners, WATCOM specific stuff.
 - linear.asm from Heretic.  Might have some faster drawing on
   some 486-era stuff?
 - Joystick support working.
 - Fixed bug with joystick super speed.
 - Fixed byte *savep warning.
 - DOOM.WAD will search for Episode 4 and auto-load Ultimate Doom.
   Can be overridden with -doom parameter.

09-13-13
 - Fixed out of control input.
 - From Heretic v1.3a port:
   * P_SetMessage function.
   * New coop rules (keep keys, weapons, backpack).
   * Secret Area found message.
   * Massacre Cheat.
   * HHSCOTT Cheat -- instantly finish level.
 - Added -perdgate, -hell2pay, and -helltopay to load Perdition's Gate and
   Hell to Pay commercial Mega WADs.

09-12-13
 - Fixed music loading issues, doom 2 loading, etc.
 - Added -doomu, -doom, -doom2, -tnt, -plutonia to force a specific game.
   Will look for the proper WAD file to do so.
 - Fixed a few other misc details like some dpmi_lockregion related stuff
   for DMX sound, episode 2 and 3 buttons not showing the second one,
   the mnum = -9 hack, linuxness math fuckery, and probably other things 
   I don't remember currently.

09-11-13
 - Fixed graphics.

09-10-13
 - Sound and graphics.

09-09-13
 - Music.

06-01-13'ish
 - Compiling and linking with DMX.  No sound, music, graphics.  
   Broken WAD loading.

12-19-12
 - First attempt.