@@ -1,11 +1,8 @@
-- Palette Flash to actually be used from config.
 - Fix snd_SfxVolume multiplier. **HACKED AROUND**
   This will also fix the Sound Volume slider in the Menu.
 - Automap to show "secrets found: x\y".
 - PC Speaker not working.  Not sure if it requires the snd_Prefixen
   or some other special I_Sound.C missing things.
-- Draw Ammo, Health, Armor and Keys in fullscreen.
 - Headbob and Palette Flash on Options Menu.
-- Fix endstring/quit messages to work for proper gamemodes.
 - Fix chainsaw pitch.
 - I_NET.C with WATT32
