@@ -42,7 +42,7 @@ char* endmsg[NUM_QUITMESSAGES+1]=
   "you're trying to say you like dos\nbetter than me, right?",
   "don't leave yet -- there's a\ndemon around that corner!",
   "ya know, next time you come in here\ni'm gonna toast ya.",
-  "go ahead and leave. see if i care."
+  "go ahead and leave. see if i care.",
 
   // QuitDOOM II messages
   "you want to quit?\nthen, thou hast lost an eighth!",
@@ -51,9 +51,9 @@ char* endmsg[NUM_QUITMESSAGES+1]=
   "if i were your boss, i'd \n deathmatch ya in a minute!",
   "look, bud. you leave now\nand you forfeit your body count!",
   "just leave. when you come\nback, i'll be waiting with a bat.",
-  "you're lucky i don't smack\nyou for thinking about leaving."
+  "you're lucky i don't smack\nyou for thinking about leaving.",
 
-  // FinalDOOM?
+  // John Romero's Quit messages
   "fuck you, pussy!\nget the fuck out!",
   "you quit and i'll jizz\nin your cystholes!",
   "if you leave, i'll make\nthe lord drink my jizz.",
@@ -67,6 +67,15 @@ char* endmsg[NUM_QUITMESSAGES+1]=
 };
 
 
-  
-
-
+char *endmsg2[8] = // FS: For Doom 2
+{
+	QUITMSG,
+	// QuitDOOM II messages
+	"you want to quit?\nthen, thou hast lost an eighth!",
+	"don't go now, there's a \ndimensional shambler waiting\nat the dos prompt!",
+	"get outta here and go back\nto your boring programs.",
+	"if i were your boss, i'd \n deathmatch ya in a minute!",
+	"look, bud. you leave now\nand you forfeit your body count!",
+	"just leave. when you come\nback, i'll be waiting with a bat.",
+	"you're lucky i don't smack\nyou for thinking about leaving."
+};
