@@ -1,4 +1,5 @@
 09-14-13
+ - Added Fullscreen Ammo, Armor, Health, and Keycards.
  - Imported the Cyberman/Tactile stuff from Heretic.
  - Added the original mprintf from DOS Doom.
  - Original gamemode determination banners, WATCOM specific stuff.
@@ -9,6 +10,8 @@
  - Fixed byte *savep warning.
  - DOOM.WAD will search for Episode 4 and auto-load Ultimate Doom.
    Can be overridden with -doom parameter.
+ - Fixed endstring/quit messages to work for proper gamemodes.
+ - Palette Flashing toggle is now read from config.
 
 09-13-13
  - Fixed out of control input.
